--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,4 +37,7 @@ jobs:
 
       # Deploy hexo blog-lucetre
       - name: Deploy Hexo Application
-        run: hexo deploy --generate
+        run: |
+          git config --global user.email "lucetre@naver.com"
+          git config --global user.name "lucetre"
+          hexo deploy --generate
