--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Install Dependencies and Hexo
         run: |
-          git config --global user.email "lucetre@naver.com"
-          git config --global user.name "lucetre"
+          git config --global user.email "${USER_EMAIL}"
+          git config --global user.name "${USER_NAME}"
           npm install
           npm install -g hexo-cli
 
