--- a/_config.yml
+++ b/_config.yml
@@ -108,5 +108,5 @@ theme: icarus
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://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@github.com/lucetre/lucetre.github.io
+  repo: https://__GITHUB_TOKEN__@github.com/lucetre/lucetre.github.io
   branch: master
