--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Install Dependencies and Hexo
         run: |
-          git config --global user.email "${USER_EMAIL}"
-          git config --global user.name "${USER_NAME}"
-          sed -i "s/__GITHUB_TOKEN__/${GITHUB_TOKEN}/" _config.yml
+          git config --global user.email "${secrets.USER_EMAIL}"
+          git config --global user.name "${secrets.USER_NAME}"
+          sed -i "s/__GITHUB_TOKEN__/${secrets.GITHUB_TOKEN}/" _config.yml
           npm install
           npm install -g hexo-cli
 
