--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Install Dependencies and Hexo
         run: |
           git config --global user.email "lucetre@naver.com"
-          git config --global user.name "lucetre"
-          sed -i "s/__GITHUB_TOKEN__/${{ secrets.github_token }}/" _config.yml
+          git config --global user.name "github.actor"
+          sed -i "s/__GITHUB_TOKEN__/${{ secrets.HEXO_DEPLOY_PRI }}/" _config.yml
           npm install
           npm install -g hexo-cli
 
