--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
           
       - name: Install Dependencies and Hexo
         run: |
-          git config --global user.email "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
-          git config --global user.name "github.actor"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           sed -i "s/__GITHUB_TOKEN__/${{ secrets.DEPLOY_TOKEN }}/" _config.yml
           npm install
           npm install -g hexo-cli
