Fix profile display name

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -211,7 +211,7 @@ widgets:
     position: left
     type: profile
     # Author name
-    author: Sangjun Son
+    author: Sangjun (Aslan) Son
     # Author title
     author_title: lucetre
     # Author's current location
