--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Sangjun Son
+title: Sangjun (Aslan) Son
 subtitle: ''
 description: ''
 keywords:
