Change author location from Seoul to Seattle

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -215,7 +215,7 @@ widgets:
     # Author title
     author_title: lucetre
     # Author's current location
-    location: Seoul, Republic of Korea
+    location: Seattle, WA
     # URL or path to the avatar image
     avatar: https://avatars2.githubusercontent.com/u/26702243?s=460&u=4eb5f0b92f74480477a56abb900f9a419dedbf9d&v=4
     # Whether show the rounded avatar image
